<resources>
    <string name="app_name">Señalar</string>
    <string name="des_logo_senalar">Logo aplicación Señalar</string>
    <string name="app_title">SeñalAR</string>
    <string name="subscribe_title">Subscribirse</string>
    <string name="subscribe_description">La subscripción a la versión premium elimina los anuncios de la aplicación</string>
    <string name="subscribe_price">¡A sólo $150 por mes!</string>
    <string name="how_to_use">¿Cómo se usa?</string>
    <string name="how_it_works">¿Cómo funciona?</string>
    <string name="start_translate">Iniciar traducción</string>
    <string name="text_sample">(EN ESTA SECCION APARECERAN LOS SUBTITULOS)</string>
    <string name="choose_language">"Idioma de traducción"</string>
    <string name="accept">"Aceptar"</string>
    <string name="cancel">"Cancelar"</string>
    <string name="lang_spanish">Español</string>
    <string name="lang_english">English</string>
    <string name="lang_portuguese">Portuguese</string>
    <string name="how_to_use_title">Cómo se usa la aplicación</string>
    <string name="your_web_client_id">481251153805-sjr3mpka5p9egd61ijrj35jpfb8hcq06.apps.googleusercontent.com</string>
    <string name="google_login">Google Login</string>
    <string name="sign_in_with_google">Entrar con Google</string>
    <string name="sign_out">Desconectarse</string>
    <string name="title_activity_start_subscription">StartSubscription</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>