<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogoSenalar"
            android:layout_width="89dp"
            android:layout_height="91dp"
            android:layout_gravity="center"
            android:contentDescription="@string/des_logo_senalar"
            android:src="@drawable/logo_senalar" />

        <TextView
            android:id="@+id/tVAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="34sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cameraButton"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        android:text="@string/start_translate"
        android:textAlignment="center"
        android:textSize="24sp"
        app:icon="@android:drawable/ic_menu_camera"
        app:iconGravity="textEnd"
        app:iconPadding="32sp"
        app:iconSize="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHowToUse"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/how_to_use"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHowDoesItWork"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/how_it_works"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>