<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_light_blue"
    tools:context=".StartSubscription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/contrast_light_blue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSubscribeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/subscribe_title"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubscribeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/subscribe_description"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvSubscribePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/subscribe_price"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"/>

        <com.braintreepayments.cardform.view.CardForm
            android:id="@+id/card_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnSubscribe"
            android:visibility="gone"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_title"
            android:backgroundTint="@color/main_light_blue"
            android:textColor="@color/contrast_light_blue"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/btnSubscribeDummy"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_title"
            android:backgroundTint="@color/main_light_blue_transparent"
            android:textColor="@color/contrast_light_blue"
            android:layout_margin="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>